change styling to fix the shift in help dialogs

--- a/stylesheets/footer.styl
+++ b/stylesheets/footer.styl
@@ -30,12 +30,3 @@
   .nav-item
     margin-bottom: 3px
     display: block
-
-  .logo-ampersand-pink
-    width: 17px
-    height: 20px
-    margin-top: 10px
-    display: inline-block
-    text-indent: -9999em
-    background: url('images/logo-ampersand.png') no-repeat top center
-    background-size: 17px auto
